--- a/dashboard/online_help/templates/online_help/navbar.html
+++ b/dashboard/online_help/templates/online_help/navbar.html
@@ -18,7 +18,7 @@
                     <a class="nav-link {% if request.resolver_match.url_name == 'users' %}active{% endif %}" href="{% url 'online_help:users' %}">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'something' %}active{% endif %}" href="{% url 'online_help:erd' %}">ERD</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'erd' %}active{% endif %}" href="{% url 'online_help:erd' %}">ERD</a>
                 </li>
                 <li class="nav-item">
                     <button id="themeToggle" class="btn btn-outline-light ms-3">Toggle Theme</button>
