--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -32,7 +32,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for sub, color, writer in section.subsections %}
+                                    {% for sub, color, writer, comments in section.subsections %}
                                     <tr>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ writer }}</td>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ sub }}</td>
@@ -70,7 +70,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for sub, color, writer in section.subsections %}
+                                    {% for sub, color, writer, comments in section.subsections %}
                                     <tr>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ writer }}</td>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ sub }}</td>
@@ -111,7 +111,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for sub, color, writer in section.subsections %}
+                                    {% for sub, color, writer, comments in section.subsections %}
                                     <tr>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ writer }}</td>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ sub }}</td>
@@ -148,7 +148,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for sub, color, writer in section.subsections %}
+                                    {% for sub, color, writer, comments in section.subsections %}
                                     <tr>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ writer }}</td>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ sub }}</td>
