--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -16,7 +16,8 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="bg-light rounded scroll-box">
-                    <div class="p-3 bg-primary text-white text-center">
+                    <!-- <div class="p-3 bg-primary text-white text-center"> -->
+                    <div class="p-3 text-white text-center" style="background-color: #0747a6;">
                         <!-- <h1>Online Help User Guides</h1> -->
                         <p class="m-0">Online Help User Guides</p>
                     </div>
@@ -54,7 +55,8 @@
             <!-- ! bg-success dati -->
             <div class="col-md-6">
                 <div class="bg-light rounded scroll-box">
-                    <div class="p-3 bg-primary text-white text-center">
+                    <!-- <div class="p-3 bg-primary text-white text-center"> -->
+                    <div class="p-3 text-white text-center" style="background-color: #0747a6;">
                         <!-- <h1>Online Help Reference</h1> -->
                         <p class="m-0">Online Help Reference</p>
                     </div>
@@ -95,7 +97,8 @@
             <!-- ! bg-warning dati -->
             <div class="col-md-6">
                 <div class="bg-light rounded scroll-box">
-                    <div class="p-3 bg-primary text-white text-center">
+                    <!-- <div class="p-3 bg-primary text-white text-center"> -->
+                    <div class="p-3 text-white text-center" style="background-color: #0747a6;">
                         <!-- <h1>Standalone Tools</h1> -->
                         <p class="m-0">Standalone Tools</p>
                     </div>
@@ -132,7 +135,9 @@
             <!-- ! bg-danger dati -->
             <div class="col-md-6">
                 <div class="bg-light rounded scroll-box">
-                    <div class="p-3 bg-primary text-white text-center">
+                    <div class="p-3 text-white text-center" style="background-color: #0747a6;">
+                        <!-- <h1>PDF Documents</h1> -->
+                    <!-- <div class="p-3 bg-primary text-white text-center"> -->
                         <!-- <h1>PDF Documents</h1> -->
                         <p class="m-0">PDF Documents</p>
                     </div>
