erd.html may comments na lahat
next is dapat malagay mo sa database lahat ng comments, and ma-access yun based on pk siguro

--- a/dashboard/online_help/templates/online_help/erd.html
+++ b/dashboard/online_help/templates/online_help/erd.html
@@ -79,7 +79,7 @@
                                         <td style="border: 1px solid #444; padding: 8px; background-color: '{{ color }}';">
                                             {{ color }}
                                         </td>
-                                        <td style="border: 1px solid #444; padding: 8px;">{{ Comments }}</td>
+                                        <td style="border: 1px solid #444; padding: 8px;">{{ comments|safe }}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
@@ -120,7 +120,7 @@
                                         <td style="border: 1px solid #444; padding: 8px; background-color: '{{ color }}';">
                                             {{ color }}
                                         </td>
-                                        <td style="border: 1px solid #444; padding: 8px;">{{ Comments }}</td>
+                                        <td style="border: 1px solid #444; padding: 8px;">{{ comments|safe }}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
@@ -157,7 +157,7 @@
                                         <td style="border: 1px solid #444; padding: 8px; background-color: '{{ color }}';">
                                             {{ color }}
                                         </td>
-                                        <td style="border: 1px solid #444; padding: 8px;">{{ Comments }}</td>
+                                        <td style="border: 1px solid #444; padding: 8px;">{{ comments|safe }}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
