--- a/dashboard/online_help/templates/online_help/navbar.html
+++ b/dashboard/online_help/templates/online_help/navbar.html
@@ -7,7 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav me-auto">  <!-- "me-auto" aligns the left items to the left -->
                 <li class="nav-item">
                     <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'online_help:home' %}">Dashboard</a>
                 </li>
@@ -20,6 +20,19 @@
                 <li class="nav-item">
                     <a class="nav-link {% if request.resolver_match.url_name == 'erd' %}active{% endif %}" href="{% url 'online_help:erd' %}">ERD</a>
                 </li>
+            </ul>
+
+            <!-- Right-aligned section for Logout/Login -->
+            <ul class="navbar-nav ml-auto"> <!-- "ml-auto" aligns this to the right -->
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'online_help:logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}" href="{% url 'online_help:login' %}">Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
