may dump contents na ung four writers

--- a/dashboard/online_help/templates/online_help/per_subsection.html
+++ b/dashboard/online_help/templates/online_help/per_subsection.html
@@ -28,6 +28,17 @@
             <div class="mb-3">
                 <h5 class="text-muted">Comments</h5>
                 <p class="font-weight-bold">Update text from 2024.2 to 2025.1</p>
+                <p>•ERD-05.08 (DNG-22491) – Request for adding "percentage" view in Report Summary and Run Manager
+                --05/09/2025: Documentation is done, Manish has reviewed and approved updates. Changes here: User Guides > Managing Projects > Viewing Logs and Reports</p>
+
+                <p>•ERD-05.10 (DNG-21175) – Enhancement Request - Breakdowns of Runtime for Different Compilation Stage
+                --03/27/2025: In Progress. Per Manish, this is not yet implemented in Radiant.
+                --05/05/2025: Done. Added to User Guides > Managing Projects > Viewing Logs and Reports section.</p>
+
+                <p>•ERD-10.02 (DNG-22646) – Report parameters on an entity with generics to show what has been passed
+                --03/27/2025: In Progress. Verifying with Alka if this has been implemented in Radiant.
+                --04/03/2025: Followed up with Alka.
+                --04/07/2025: Added content to User Guides > Managing Projects > Viewing Logs and Reports and sent to Alka for review.</p>
             </div>
         </div>
     </div>
