--- a/dashboard/online_help/templates/online_help/home.html
+++ b/dashboard/online_help/templates/online_help/home.html
@@ -38,7 +38,7 @@
                             <tbody>
                                 <tr>
                                     <td style="border: 1px solid #444; padding: 8px;">
-                                        <a href='{% url 'online_help:per_subsection' %}' class="hover-link">Getting Started</a>
+                                        Getting Started
                                     </td>
                                     <td style="border: 1px solid #444; padding: 8px;">
                                         <a href='{% url 'online_help:per_subsection' %}' class="hover-link">Introduction</a>
