--- a/dashboard/online_help/static/css/per_section.css
+++ b/dashboard/online_help/static/css/per_section.css
@@ -1,17 +1,17 @@
-body {
-    background-color: #f4f4f4 !important;
-    font-family: Arial, sans-serif;
+/* p {
+    margin: 0;
+    padding: 0 20px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
-/* h1 {
-    color: #b01616;
+h1 {
     text-align: center;
     margin-top: 20px;
-} */
+}
 
-/* .four-boxes {
-    display: flex;
-    justify-content: center;
+h2,h3,h4 {
+    color: #333;
     margin-top: 20px;
 } */
 
@@ -39,4 +39,3 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
