--- a/dashboard/online_help/templates/online_help/per_documentation.html
+++ b/dashboard/online_help/templates/online_help/per_documentation.html
@@ -1,31 +1,35 @@
 {% extends "online_help/base.html" %}
-{% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/per_subsection.css' %}">
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/per_documentation.css' %}">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
 
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
-            <h2 class="mb-0">Getting Started</h2>
+            <h2 class="mb-0">Online Help User Guide</h2>
             <a href="" class="btn btn-outline-dark btn-sm">Edit</a>
         </div>
         <div class="card-body">
             <div class="mb-3">
-                <h5 class="text-muted">Writer</h5>
-                <p class="font-weight-bold">Ave Manriquez</p>
+                {% for section in section_user_guide %}
+                <h5 class="text-muted">
+                    <a href="" class="hover-link">{{ section.Section }}</a>
+                </h5>
+                {% endfor %}
+                <!-- <p class="font-weight-bold">Ave Manriquez</p> -->
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <h5 class="text-muted">Subsection</h5>
                 <p class="font-weight-bold">Introduction</p>
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Color</h5>
                 <p class="font-weight-bold text-warning">Yellow</p>
-            </div>
-            <div class="mb-3">
+            </div> -->
+            <!-- <div class="mb-3">
                 <h5 class="text-muted">Comments</h5>
                 <p class="font-weight-bold">•ERD-05.08 (DNG-22491) – Request for adding "percentage" view in Report Summary and Run Manager</p>
                 <p>--05/09/2025: Documentation is done, Manish has reviewed and approved updates. Changes here: User Guides > Managing Projects > Viewing Logs and Reports</p>
@@ -38,7 +42,7 @@
                 <p>--03/27/2025: In Progress. Verifying with Alka if this has been implemented in Radiant.</p>
                 <p>--04/03/2025: Followed up with Alka.</p>
                 <p>--04/07/2025: Added content to User Guides > Managing Projects > Viewing Logs and Reports and sent to Alka for review.</p>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
