--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -19,11 +19,15 @@
                     <!-- <div class="p-3 bg-primary text-white text-center"> -->
                     <div class="p-3 text-white text-center" style="background-color: #0747a6;">
                         <!-- <h1>Online Help User Guides</h1> -->
-                        <p class="m-0">Online Help User Guides</p>
+                        <p class="m-0">
+                            <a href="{% url 'online_help:per_documentation' %}" class="hover-link">Online Help User Guides</a>
+                        </p>
                     </div>
                     <div class="p-2">
                         {% for section in section_user_guide %}
-                            <h5>{{ section.Section }}</h5>
+                            <h5>
+                                <a href='{% url 'online_help:per_section' %}' class="hover-link">{{ section.Section }}</a>
+                            </h5>
                             <table style="width: 600px; border-collapse: collapse; margin-bottom: 20px; border: 1px solid #444;">
                                 <thead style="color: #2a4d9b; background-color: #f2f2f2;">
                                     <tr>
