--- a/dashboard/online_help/templates/online_help/home.html
+++ b/dashboard/online_help/templates/online_help/home.html
@@ -22,7 +22,9 @@
                     <!-- <div class="p-3 bg-primary text-white text-center"> -->
                     <div class="p-3 text-white text-center" style="background-color: #0747a6;">
                         <!-- <h1>Online Help User Guides</h1> -->
-                        <p class="m-0">Ave Manriquez</p>
+                        <p class="m-0">
+                            <a href="{% url 'online_help:per_user' %}" class="hover-link">Ave Manriquez</a>
+                        </p>
                     </div>
 
                 <div class="p-2">
