--- a/dashboard/online_help/templates/online_help/navbar.html
+++ b/dashboard/online_help/templates/online_help/navbar.html
@@ -15,7 +15,8 @@
                     <a class="nav-link {% if request.resolver_match.url_name == 'tasks' %}active{% endif %}" href="{% url 'online_help:tasks' %}">Tasks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'activity' %}active{% endif %}" href="{% url 'online_help:activity' %}">Your Activities</a>
+                    <!-- your activities dapat -->
+                    <a class="nav-link {% if request.resolver_match.url_name == 'activity' %}active{% endif %}" href="{% url 'online_help:activity' %}"></a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link {% if request.resolver_match.url_name == 'erd' %}active{% endif %}" href="{% url 'online_help:erd' %}">ERD</a>
