with per_user_edit forms

--- a/dashboard/online_help/templates/online_help/per_user.html
+++ b/dashboard/online_help/templates/online_help/per_user.html
@@ -32,7 +32,7 @@
                                         Yellow
                                     </td>
                                     <td style="border: 1px solid #444; padding: 8px;">
-                                        <a href="{% url 'online_help:per_subsection' %}">Edit</a>
+                                        <a href="{% url 'online_help:per_user_edit' %}">Edit</a>
                                     </td>
                                 </tr>
                                 <tr>
