--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -13,10 +13,12 @@
     
     <!-- * Container -->
     <div class="container mt-4">
-
-        <div class="p-3" style="position: sticky; top: 30px; z-index: 1000;">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search sections or subsections..." onkeyup="filterContent()">
+        <div class="p-3 d-flex justify-content-between align-items-start gap-3" style="position: sticky; top: 30px; z-index: 1000;">
+            <input type="text" id="searchInput" class="form-control w-80" placeholder="Search sections or subsections..." onkeyup="filterContent()">
+        <!--     <button class="btn btn-primary" onclick="filterContent()">Edit</button> -->
+            <a href="{% url 'online_help:tasks_edit' %}" class="btn btn-primary">Edit</a>
         </div>
+
 
         <div class="row mb-3">
             <div class="col-md-6">
