--- a/dashboard/online_help/templates/online_help/tasks_edit.html
+++ b/dashboard/online_help/templates/online_help/tasks_edit.html
@@ -9,14 +9,14 @@
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
-            <h2 class="mb-0">Online Help User Guide</h2>
+            <h2 class="mb-0">Radiant Documentation</h2>
             <a href="" class="btn btn-outline-dark btn-sm">Edit</a>
         </div>
         <div class="card-body">
             <div class="mb-3">
-                {% for section in section_user_guide %}
+                {% for docu in radiant_documentation %}
                 <h5 class="text-muted">
-                    <a href="" class="hover-link">{{ section.Section }}</a>
+                    <a href="" class="hover-link">{{ docu }}</a>
                 </h5>
                 {% endfor %}
             </div>
