--- a/dashboard/online_help/templates/online_help/tasks_edit.html
+++ b/dashboard/online_help/templates/online_help/tasks_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/per_documentation.css' %}">
+<link rel="stylesheet" href="{% static 'css/tasks_edit.css' %}">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
 
@@ -10,7 +10,7 @@
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">Radiant Documentation</h2>
-            <a href="" class="btn btn-outline-dark btn-sm">Edit</a>
+            <a href="{% url 'online_help:documentation_edit' %}" class="btn btn-outline-dark btn-sm">Edit</a>
         </div>
         <div class="card-body">
             <div class="mb-3">
