--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -14,9 +14,9 @@
     <!-- * Container -->
     <div class="container mt-4">
         <div class="p-3 d-flex justify-content-between align-items-start gap-3" style="position: sticky; top: 30px; z-index: 1000;">
-            <input type="text" id="searchInput" class="form-control w-80" placeholder="Search sections or subsections..." onkeyup="filterContent()">
+            <input type="text" id="searchInput" class="form-control w-75" placeholder="Search sections or subsections..." onkeyup="filterContent()">
         <!--     <button class="btn btn-primary" onclick="filterContent()">Edit</button> -->
-            <a href="{% url 'online_help:tasks_edit' %}" class="btn btn-primary">Edit</a>
+            <a href="{% url 'online_help:tasks_edit' %}" class="btn text-white" style="background-color: #0747a6;"">Click to Edit Documents</a>
         </div>
 
 
